Fix the shadow of the Detail View pane

--- a/src/common/product-pane/_main.scss
+++ b/src/common/product-pane/_main.scss
@@ -1,7 +1,7 @@
 @mixin product-pane() {
   background-color: #fff;
   border: none;
-  box-shadow: -25px 0px 30px -5px rgba(0, 0, 0, 0.1) !important;
+  box-shadow: rgba(0, 0, 0, 0.247059) -1px 0px 2px 0px !important;
   height: 100%;
   position: fixed;
   right: 0;
