--- a/src/apps/tabs/main.scss
+++ b/src/apps/tabs/main.scss
@@ -30,6 +30,7 @@ body {
 .pane { @include product-pane; top: 0 !important; }
 .overlay { @include product-pane-overlay; }
 .close { @include product-pane-close; top: 15px !important; }
+.loader { @include product-pane-loader; }
 .no-scroll { overflow: hidden; }
 .clickable { cursor: pointer; }
 
