--- a/src/apps/content/main.scss
+++ b/src/apps/content/main.scss
@@ -12,6 +12,7 @@ $bar-height: 50px;
   border: 0 !important;
   bottom: auto !important;
   box-sizing: content-box !important;
+  box-shadow: 0 1px 2px rgba(0,0,0,.15);
   height: $bar-height !important;
   left: 0 !important;
   margin: 0 !important;
