--- a/src/apps/tabs/main.scss
+++ b/src/apps/tabs/main.scss
@@ -155,8 +155,8 @@ header {
 
     h3 {
       color: $brown-1;
-      font-size: 18px;
-      margin: 0 0 5px 0;
+      font-size: 16px;
+      margin: 0 23px 5px 0;
       padding: 0;
     }
 
