--- a/src/apps/options/main.scss
+++ b/src/apps/options/main.scss
@@ -6,6 +6,7 @@
 html,
 body {
   font-family: 'proxima-nova', 'Proxima Nova', sans-serif;
+  font-size: 13.3333px;
 }
 
 header {
@@ -13,6 +14,7 @@ header {
 }
 
 h1 {
+  color: #534540;
   font-size: 28px;
   font-weight: 400;
   line-height: 39px;
