Replace typekit with self-hosted version

--- a/src/apps/tabs/main.scss
+++ b/src/apps/tabs/main.scss
@@ -2,6 +2,7 @@
 @import "neat";
 @import "common/product-pane/main";
 @import "common/header/main";
+@import "common/fonts/proxima-nova";
 
 // Variables
 
